--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@ id: 'home'
 		<div class="small-12 columns reset">
 		<img src="images/powerup-header.png" class="home-hero-image-powerup">
 			<div class="texttext">
-				<h3 class="sub-heading slab editable"> PowerUp is a flagship GetUp event, it will define our reputation 
-with our most active committed GetUp members.</h3>
+				<h3 class="sub-heading slab editable"> Join GetUp’s first ever conference in Sydney on 23-24 September.  </h3>
 		<a class="button home-hero-button editable">Grab your ticket!</a>
 			</div>
 		</div>
@@ -37,8 +36,15 @@ with our most active committed GetUp members.</h3>
 	<div class="small-12 columns home__our-story">
 		
 		<img src="images/icons/our-story.svg" class="center-icon">
-		<h2><span class="dotted-underline editable"> Our Story </span></h2>
-		<p class="editable"> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, close allies, and sponsorsPowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, close allies, and sponsors  </p>
+		<h2><span class="dotted-underline editable"> It’s time to organise!  </span></h2>
+		<p class="editable">
+			<b>
+				Get skilled-up over two packed days, meet people from all over the country, and help make history by launching a new era of people-power in Australia.
+			</b>
+			<br>
+			<br>
+			PowerUp will train everyday Australians in the critical skills needed to launch a powerful national network of local Action Groups. PowerUp is happening now, long before the next federal election, so we have the people-power to do more than educate voters. We will shift polls, move the media, and change the battleground issues that’ll decide the next election.
+		</p>
 	</div>
 </div>
 
@@ -66,7 +72,7 @@ with our most active committed GetUp members.</h3>
 	</div>
 	<div class="small-6 medium-2 columns">
 		<img src="images/icons/scale.svg" class="narrative-icon">
-		<p class="narrative editable"> Scale up people power </p>
+		<p class="narrative editable"> Scale up people-power </p>
 	</div>
 </div>
 
