--- a/ticket.html
+++ b/ticket.html
@@ -3,11 +3,13 @@ title: 'Grab your tickets!'
 description: PowerUp
 ---
 
+<div class="dark-bg"></div>
+
 <div class="row">
     <div class="small-12 columns">
         <style type="text/css">iframe{width:100%}</style><p>
-        <iframe src="https://ticketbooth.azurewebsites.net/poweruptickets.aspx"></iframe>
+        <iframe src="https://ticketbooth.azurewebsites.net/poweruptickets.aspx" style="height: 100vh; border:none;"></iframe>
         <script type="text/javascript" src="https://ticketbooth.azurewebsites.net/scripts/iframeResizer.min.js"></script>
-        <script>iFrameResize({log:true})</script>
+        <!--<script>iFrameResize({log:true})</script>-->
     </div>
 </div>
