--- a/scholarships.html
+++ b/scholarships.html
@@ -2,6 +2,8 @@
 title: 'Scholarships'
 description: PowerUp
 ---
+<div class="dark-bg"></div>
+
 
 <div class="row" style="height:100%">
     <div class="small-12 columns" style="height: 100%">
