button temp links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ description: PowerUp
 id: 'home'
 ---
 
-<a class="button home-hero-button editable fixed-button" id="fixed-button">Grab your ticket!</a>
+<a href="https://www.getup.org.au" class="button home-hero-button editable fixed-button" id="fixed-button">Grab your ticket!</a>
 <div class="white-bg">
 		</div>
 		<div class="gradientgradient"></div>
@@ -19,7 +19,7 @@ id: 'home'
 		<img src="images/powerup-header.png" class="home-hero-image-powerup">
 			<div class="texttext">
 				<h3 class="sub-heading slab editable"> Join GetUp’s first ever conference in Sydney on 23-24 September.  </h3>
-		<a class="button home-hero-button editable">Grab your ticket!</a>
+		<a href="https://www.getup.org.au" class="button home-hero-button editable">Grab your ticket!</a>
 			</div>
 		</div>
 	</div>
@@ -86,7 +86,7 @@ id: 'home'
 				<img src="images/icons/program.svg" class="x-icon">
 				<h2> <span class="dotted-underline editable"> Programs </span></h2>
 				<p class="editable"> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, </p>
-				<a class="button editable outline">More info</a>
+				<a href="https://www.getup.org.au" class="button editable outline">More info</a>
 				</div>
 			</span>
 		</div>
@@ -102,7 +102,7 @@ id: 'home'
 				<img src="images/icons/Speakers.svg" class="x-icon">
 				<h2> <span class="dotted-underline editable" id="fade-position"> Speakers </span></h2>
 				<p class="editable"> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, </p>
-				<a class="button editable outline">Read more</a>
+				<a href="https://www.getup.org.au" class="button editable outline">Read more</a>
 			</span>
 		</div>
 		<img src="images/speakers.jpg" class="x-home-image">
@@ -119,7 +119,7 @@ id: 'home'
 					Donation ask goes here. Change the icon
 				</h3>
 				<div class="button__wrapper" >
-					<a class="button caption__button editable">Donate us</a>
+					<a href="https://www.getup.org.au" class="button caption__button editable">Donate us</a>
 				</div>
 
 			</div>
