--- a/scholarships.html
+++ b/scholarships.html
@@ -2,7 +2,8 @@
 title: 'Scholarships'
 description: PowerUp
 ---
-<div class="dark-bg"></div>
+<div class="white-bg"></div>
+<div class="gradientgradient blue-gradient"></div>
 
 
 <div class="row" style="height:100%">
