--- a/volunteers.html
+++ b/volunteers.html
@@ -2,14 +2,14 @@
 title: 'Volunteers'
 description: PowerUp
 ---
-<div class="dark-bg"></div>
+<div class="white-bg"></div>
+<div class="gradientgradient blue-gradient"></div>
 
 
 
 <div class="row" style="height:100%">
     <div class="small-12 columns" style="height: 100%">
         <style type="text/css">iframe{width:100%}</style>
-        <iframe src="http://www.surveygizmo.com/s3/3549510/Volunteer-at-PowerUp" style="height: 100vh; border: none;"></iframe>
-        <script>iFrameResize({log:true})</script>
+        <iframe src="http://www.surveygizmo.com/s3/3549510/Volunteer-at-PowerUp" class="p-iframe"></iframe>
     </div>
 </div>
