IE specific code

--- a/scholarships.html
+++ b/scholarships.html
@@ -7,7 +7,7 @@ description: PowerUp
 
 
 <div class="row" style="height:100%">
-    <div class="small-12 columns" style="height: 100%">
+    <div class="small-12 columns p-iframe-container" style="height: 100%">
         <style type="text/css">iframe{width:100%}</style>
         <iframe src="http://www.surveygizmo.com/s3/3549361/PowerUp-Scholarship-Application" class="p-iframe"></iframe>
         <script>iFrameResize({log:true})</script>
