--- a/program.html
+++ b/program.html
@@ -1,20 +1,21 @@
 ---
 ---
-<div class="dark-bg"></div>
 
-<div class="x-img-container speakers-hero">
-	<div class="x-home__image-container">
+<div class="programs-hero">
+	<div class="programs-home__image-container">
 		<div class="black blue-gradient">
-			<span class="reverse-skew black-container">
+			<span class="black-container">
 				<div>
-				<img src="../images/icons/create.svg" class="x-icon" align="top">
-				<h2> <span class="dotted-underline"> Speakers </span></h2>
-				<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, </p>
-				<a class="button ">Grab your ticket!</a>
+				<img src="../images/icons/program-white.svg" class="x-icon" align="top">
+				<h2> <span class="dotted-underline"> Programs </span></h2>
+				<p>
+				This is no ordinary conference: at PowerUp, passive participants don’t exist. Instead, we’ll focus on practical skill-building, provide interactive, engaging spaces and give you maximum opportunity to connect with other attendees. It’s a unique experience appropriate to all levels of experience.
+					<br><br>
+					<b>Stay tuned for the full program in June. 	</b>
+				</p>
 				</div>
 			</span>
 		</div>
-		<!--<img src="../images/programs-hero.jpg" class="x-home-image">-->
-		<div style="background: url(../images/programs-hero.jpg); height: 700px; width: 100vw; background-size: cover; position: relative;"></div>
+	<img src="../images/programs-hero.jpg" class="speakers-hero-image">
 	</div>
 </div>
