--- a/speakers.html
+++ b/speakers.html
@@ -3,6 +3,30 @@
 <div class="dark-bg">
 		</div>
 
+
+<div class="programs-hero">
+	<div class="programs-home__image-container">
+		<div class="black blue-gradient">
+			<span class="black-container">
+				<div>
+				<img src="../images/icons/speakers-white.svg" class="x-icon" align="top">
+				<h2> <span class="dotted-underline"> Speakers </span></h2>
+				<p>
+					We’re lining up some of the most effective Australian and global organisers of mass people-power. These inspiring speakers will bring you exclusive insights into the state of the nation and the world, and explain the strategy behind organised people-power as the antidote to the crises of our time.
+					<br><br>
+					<b>Stay tuned for the full list in June. 	</b>
+				</p>
+				</div>
+			</span>
+		</div>
+	<img src="../images/programs.jpg" class="speakers-hero-image">
+	</div>
+</div>
+
+
+
+
+<!--
 <div class="x-img-container speakers-hero">
 		
 	<div class="x-home__image-container">
@@ -11,7 +35,9 @@
 				<div>
 				<img src="../images/icons/create.svg" class="x-icon">
 				<h2> <span class="dotted-underline editable"> Speakers </span></h2>
-				<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, </p>
+				<p>
+					This is no ordinary conference: at PowerUp, passive participants don’t exist. Instead, we’ll focus on practical skill-building, provide interactive, engaging spaces and give you maximum opportunity to connect with other attendees. It’s a unique experience appropriate to all levels of experience. Stay tuned for the full program in June. 
+				</p>
 				<a class="button editable">Grab your ticket!</a>
 				</div>
 			</span>
@@ -179,3 +205,5 @@
 		</div>
 	</div>
 </div>
+
+-->
