--- a/ticket.html
+++ b/ticket.html
@@ -10,6 +10,6 @@ description: PowerUp
         <style type="text/css">iframe{width:100%}</style><p>
         <iframe src="https://ticketbooth.azurewebsites.net/poweruptickets.aspx" style="height: 100vh; border:none;"></iframe>
         <script type="text/javascript" src="https://ticketbooth.azurewebsites.net/scripts/iframeResizer.min.js"></script>
-        <!--<script>iFrameResize({log:true})</script>-->
+        <script>iFrameResize({log:true})</script>
     </div>
 </div>
