--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ id: 'home'
 		<img src="images/icons/arrowarrow.svg" class="arrow-icon">
 	</div>
 	<div class="small-6 medium-2 columns">
-		<img src="images/icons/scale.svg" class="narrative-icon">
+		<img src="images/icons/scalescale.svg" class="narrative-icon">
 		<p class="narrative editable"> Scale up people-power </p>
 	</div>
 </div>
