--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 ---
-title: Our team
+title: About
 description: We've built an amazing team of developers, marketers, designers and sales people.
 ---
 
