--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 ---
 title: 'PowerUp!'
 description: PowerUp
-id: 'home'
+id: home
 ---
 
-<a href="https://ticketbooth.azurewebsites.net/poweruptickets.aspx" class="button home-hero-button lnk_modal-open fixed-button" id="fixed-button" data-modal="https://ticketbooth.azurewebsites.net/poweruptickets.aspx" data-modalTitle="" data-modalDesc="">Grab your ticket!</a>
+<a href="https://ticketbooth.azurewebsites.net/poweruptickets.aspx" class="button home-hero-button lnk_modal-open fixed-button" id="fixed-button" data-modal="https://ticketbooth.azurewebsites.net/poweruptickets.aspx" data-modaltitle="" data-modaldesc="">Grab your ticket!</a>
 <div class="white-bg">
 		</div>
 		<div class="gradientgradient"></div>
 
 
 <div class="home-hero">
-	<img src="images/hero.jpg" class="home-hero-image">
+	<img src="images/hero.jpg" class="home-hero-image" />
 	<div class="home-hero-image-powerup-container">
 	</div>
 	<div class="row">
 		<div class="small-12 columns reset">
-		<img src="images/powerup-header.png" class="home-hero-image-powerup">
+		<img src="images/powerup-header.png" class="home-hero-image-powerup" />
 			<div class="texttext">
-				<h3 class="sub-heading slab editable">
-					Join GetUp’s first ever conference in Sydney on 23-24 September. 
-					</h3>
-		<a href="/ticket/" class="button home-hero-button editable">Grab your ticket!</a>
+				<h3 class="sub-heading slab editable">Join GetUp&rsquo;s first <em>ever</em>&nbsp;conference<br />in Sydney on 23-24 September.</h3>
+		<a href="/ticket/" class="button home-hero-button editable">Secure your ticket!</a>
 			</div>
 		</div>
 	</div>
@@ -37,44 +35,37 @@ id: 'home'
 <div class="row">
 	<div class="small-12 columns home__our-story">
 		
-		<img src="images/icons/our-story.svg" class="center-icon">
-		<h2><span class="dotted-underline editable"> It’s time to organise!  </span></h2>
-		<p class="editable">
-			<b>
-				Get skilled-up over two packed days, meet people from all over the country, and help make history by launching a new era of people-power in Australia.
-			</b>
-			<br>
-			<br>
-			PowerUp will train everyday Australians in the critical skills needed to launch a powerful national network of local Action Groups. PowerUp is happening now, long before the next federal election, so we have the people-power to do more than educate voters. We will shift polls, move the media, and change the battleground issues that’ll decide the next election.
-		</p>
+		<img src="images/icons/our-story.svg" class="center-icon" />
+		<h2><span class="dotted-underline editable"> It’s time to organise</span></h2>
+		<p class="editable"><b> Get skilled-up over two packed days, meet people from all over the country, and help make history by launching a new era of people-power in Australia. </b><br /><br />PowerUp will train everyday Australians in the critical skills needed to launch a powerful national network of local Action Groups. PowerUp is happening now, long before the next federal election, so we have the people-power to do <em>more</em> than educate voters. <strong>We will shift polls, move the media, and change the battleground issues that&rsquo;ll decide the next election.</strong></p>
 	</div>
 </div>
 
 <div class="row narrative-container">
 	<div class="small-6 medium-2 columns">
-		<img src="images/icons/tickets.svg" class="narrative-icon">
-		<p class="narrative editable"> Secure your place </p>
+		<img src="images/icons/tickets.svg" class="narrative-icon" />
+		<p class="narrative editable">Secure your ticket!</p>
 	</div>
 	<div class="medium-1 columns arrow-icon-container">
-		<img src="images/icons/arrowarrow.svg" class="arrow-icon">
+		<img src="images/icons/arrowarrow.svg" class="arrow-icon" />
 	</div>
 	<div class="small-6 medium-2 columns">
-		<img src="images/icons/Develop.svg" class="narrative-icon">
-		<p class="narrative editable"> Learn critical organizing skills </p>
+		<img src="images/icons/Develop.svg" class="narrative-icon" />
+		<p class="narrative editable">Learn critical organizing skills</p>
 	</div>
 	<div class="medium-1 columns arrow-icon-container">
-		<img src="images/icons/arrowarrow.svg" class="arrow-icon">
+		<img src="images/icons/arrowarrow.svg" class="arrow-icon" />
 	</div>
 	<div class="small-6 medium-2 columns">
-		<img src="images/icons/Create.svg" class="narrative-icon">
-		<p class="narrative editable"> Create local action groups </p>
+		<img src="images/icons/Create.svg" class="narrative-icon" />
+		<p class="narrative editable">Create local Action Groups</p>
 	</div>
 	<div class="medium-1 columns arrow-icon-container">
-		<img src="images/icons/arrowarrow.svg" class="arrow-icon">
+		<img src="images/icons/arrowarrow.svg" class="arrow-icon" />
 	</div>
 	<div class="small-6 medium-2 columns">
-		<img src="images/icons/scalescale.svg" class="narrative-icon">
-		<p class="narrative editable"> Scale up people-power </p>
+		<img src="images/icons/scalescale.svg" class="narrative-icon" />
+		<p class="narrative editable">Scale up people-power!</p>
 	</div>
 </div>
 
@@ -85,14 +76,14 @@ id: 'home'
 		<div class="black">
 			<span class="reverse-skew black-container">
 				<div>
-				<img src="images/icons/program.svg" class="x-icon">
-				<h2> <span class="dotted-underline editable"> Programs </span></h2>
-				<p class="editable"> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, </p>
+				<img src="images/icons/program.svg" class="x-icon" />
+				<h2> <span class="dotted-underline editable">The Program</span></h2>
+				<p class="editable">PowerUp is no&nbsp;<em>ordinary</em> conference. The program will focus on practical skill-building, provide interactive, engaging spaces and give you maximum opportunity to connect with other attendees. It&rsquo;s a unique experience appropriate to all levels of experience.<strong>&nbsp;Stay tuned for the full program in June.</strong></p>
 				<a href="/program/" class="button editable outline">More info</a>
 				</div>
 			</span>
 		</div>
-		<img src="images/programs.jpg" class="x-home-image">
+		<img src="images/programs.jpg" class="x-home-image" />
 	</div>
 </div>
 <div class="x-img-container">
@@ -101,13 +92,13 @@ id: 'home'
 	<div class="x-home__image-container">
 		<div class="black reverse">
 			<span class="reverse-skew black-container reverse">				
-				<img src="images/icons/Speakers.svg" class="x-icon">
-				<h2> <span class="dotted-underline editable" id="fade-position"> Speakers </span></h2>
-				<p class="editable"> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, </p>
-				<a href="/speakers/" class="button editable outline">Read more</a>
+				<img src="images/icons/Speakers.svg" class="x-icon" />
+				<h2> <span class="dotted-underline editable" id="fade-position">Speakers </span></h2>
+				<p class="editable">Is organised people-power the antidote to the crises of our time? PowerUp will bring you some of the most effective organisers of people-power from Australia and beyond. These speakers will bring you exclusive insights into the state of the nation and the world , and share their strategies for disrupting the status quo.&nbsp;<strong>Stay tuned for speaker updates in June.</strong></p>
+				<a href="/speakers/" class="button editable outline">More info</a>
 			</span>
 		</div>
-		<img src="images/speakers.jpg" class="x-home-image">
+		<img src="images/speakers.jpg" class="x-home-image" />
 	</div>
 	<div class="white-border"> </div>
 </div>
@@ -117,11 +108,9 @@ id: 'home'
 		<div class="row">
 			<div class="small-12 columns">
 				<!--<img src="images/icons/Tickets.svg" class="center-icon">-->
-				<h3 class="caption editable">
-					PowerUp has a small scholarship fund to help cover the cost of tickets, travel and accommodation for those without the means. The more money there is, the more scholarships we can provide. Help get more people to PowerUp.
-				</h3>
-				<div class="button__wrapper" >
-          <a href="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" class="button caption__button lnk_modal-open" data-modal="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" data-modalTitle="" data-modalDesc="">Donate us</a>
+				<h3 class="caption editable">PowerUp has a small scholarship fund to help cover the cost of tickets, travel and accommodation for passionate people without the means. The more money there is, the more scholarships we can provide. Help us get more people to PowerUp.</h3>
+				<div class="button__wrapper">
+          <a href="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" class="button caption__button lnk_modal-open" data-modal="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" data-modaltitle="" data-modaldesc="">Donate us</a>
 				</div>
 
 			</div>
