Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ id: home
 		<div class="small-12 columns reset">
 		<img src="images/powerup-header.png" class="home-hero-image-powerup" />
 			<div class="texttext">
-				<h3 class="sub-heading slab editable">Join GetUp&rsquo;s first <em>ever</em>&nbsp;conference<br />in Sydney on 23-24 September.</h3>
+				<h3 class="sub-heading slab editable">Join us at GetUp&rsquo;s first national conference<br />in Sydney on 23-24 September.</h3>
 		<a href="/ticket/" class="button home-hero-button editable">Secure your ticket!</a>
 			</div>
 		</div>
@@ -36,36 +36,36 @@ id: home
 	<div class="small-12 columns home__our-story">
 		
 		<img src="images/icons/our-story.svg" class="center-icon" />
-		<h2><span class="dotted-underline editable"> It’s time to organise</span></h2>
-		<p class="editable"><b> Get skilled-up over two packed days, meet people from all over the country, and help make history by launching a new era of people-power in Australia. </b><br /><br />PowerUp will train everyday Australians in the critical skills needed to launch a powerful national network of local Action Groups. PowerUp is happening now, long before the next federal election, so we have the people-power to do <em>more</em> than educate voters. <strong>We will shift polls, move the media, and change the battleground issues that&rsquo;ll decide the next election.</strong></p>
+		<h2><span class="dotted-underline editable">It's time to organise!</span></h2>
+		<p class="editable"><strong>PowerUp is no ordinary conference. </strong><br />You'll be skilled-up over two packed days, connect with people from all over the country, and usher in a new era of people-power in Australia.&nbsp;<br /><br /><strong>PowerUp will train you in the critical organising skills and launch a national network of local Action Groups</strong>. You'll build relationships with people from your home electorate and learn how to scale people-power nationally.&nbsp;<br /><br />PowerUp is about organising the power to do <em>more</em> than educate voters at election time. <strong>We are building the power to shift polls, move the media, and change the battleground issues that&rsquo;ll decide the next election.<br /><br />BUTTON: Secure your ticket!</strong></p>
 	</div>
 </div>
 
 <div class="row narrative-container">
 	<div class="small-6 medium-2 columns">
 		<img src="images/icons/tickets.svg" class="narrative-icon" />
-		<p class="narrative editable">Secure your ticket!</p>
+		<p class="narrative editable">Secure<br />Your Ticket!</p>
 	</div>
 	<div class="medium-1 columns arrow-icon-container">
 		<img src="images/icons/arrowarrow.svg" class="arrow-icon" />
 	</div>
 	<div class="small-6 medium-2 columns">
 		<img src="images/icons/Develop.svg" class="narrative-icon" />
-		<p class="narrative editable">Learn critical organizing skills</p>
+		<p class="narrative editable">Learn<br />Critical Skills</p>
 	</div>
 	<div class="medium-1 columns arrow-icon-container">
 		<img src="images/icons/arrowarrow.svg" class="arrow-icon" />
 	</div>
 	<div class="small-6 medium-2 columns">
 		<img src="images/icons/Create.svg" class="narrative-icon" />
-		<p class="narrative editable">Create local Action Groups</p>
+		<p class="narrative editable">Create<br />Action Groups</p>
 	</div>
 	<div class="medium-1 columns arrow-icon-container">
 		<img src="images/icons/arrowarrow.svg" class="arrow-icon" />
 	</div>
 	<div class="small-6 medium-2 columns">
 		<img src="images/icons/scalescale.svg" class="narrative-icon" />
-		<p class="narrative editable">Scale up people-power!</p>
+		<p class="narrative editable">Scale &nbsp;<br />People-Power!</p>
 	</div>
 </div>
 
@@ -78,7 +78,7 @@ id: home
 				<div>
 				<img src="images/icons/program.svg" class="x-icon" />
 				<h2> <span class="dotted-underline editable">The Program</span></h2>
-				<p class="editable">PowerUp is no&nbsp;<em>ordinary</em> conference. The program will focus on practical skill-building, provide interactive, engaging spaces and give you maximum opportunity to connect with other attendees. It&rsquo;s a unique experience appropriate to all levels of experience.<strong>&nbsp;Stay tuned for the full program in June.</strong></p>
+				<p class="editable">PowerUp will focus on practical skill-building, provide interactive, engaging spaces and give you maximum opportunity to connect with other attendees. It&rsquo;s a unique experience appropriate to all levels of experience.<strong>&nbsp;Stay tuned for the full program in June.</strong></p>
 				<a href="/program/" class="button editable outline">More info</a>
 				</div>
 			</span>
@@ -94,7 +94,7 @@ id: home
 			<span class="reverse-skew black-container reverse">				
 				<img src="images/icons/Speakers.svg" class="x-icon" />
 				<h2> <span class="dotted-underline editable" id="fade-position">Speakers </span></h2>
-				<p class="editable">Is organised people-power the antidote to the crises of our time? PowerUp will bring you some of the most effective organisers of people-power from Australia and beyond. These speakers will bring you exclusive insights into the state of the nation and the world , and share their strategies for disrupting the status quo.&nbsp;<strong>Stay tuned for speaker updates in June.</strong></p>
+				<p class="editable">PowerUp will bring you some of the most inspiring organisers of people-power from Australia and beyond. These change-makers will bring you exclusive insights into the state of the nation and the world , and share their strategies for disrupting the status quo.&nbsp;<strong>Stay tuned for speaker updates in June.</strong></p>
 				<a href="/speakers/" class="button editable outline">More info</a>
 			</span>
 		</div>
@@ -108,7 +108,7 @@ id: home
 		<div class="row">
 			<div class="small-12 columns">
 				<!--<img src="images/icons/Tickets.svg" class="center-icon">-->
-				<h3 class="caption editable">PowerUp has a small scholarship fund to help cover the cost of tickets, travel and accommodation for passionate people without the means. The more money there is, the more scholarships we can provide. Help us get more people to PowerUp.</h3>
+				<h3 class="caption editable">A small scholarship fund has been set aside to help with the cost of the ticket, accommodation and travel for those without the means. &nbsp;Can you chip in to the PowerUp Scholarship Fund?</h3>
 				<div class="button__wrapper">
           <a href="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" class="button caption__button lnk_modal-open" data-modal="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" data-modaltitle="" data-modaldesc="">Donate us</a>
 				</div>
