Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ id: home
 			<span class="reverse-skew black-container reverse">				
 				<img src="images/icons/Speakers.svg" class="x-icon" />
 				<h2> <span class="dotted-underline editable" id="fade-position">Speakers </span></h2>
-				<p class="editable">PowerUp will bring you some of the most inspiring organisers of people-power from Australia and beyond. These change-makers will bring you exclusive insights into the state of the nation and the world , and share their strategies for disrupting the status quo.&nbsp;<strong>Stay tuned for speaker updates in June.</strong></p>
+				<p class="editable">Some of the most effective community organisers are lining up to speak at PowerUp. These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to disrupt the status quo.&nbsp;<em><strong>Stay tuned for updates in June.</strong></em></p>
 				<a href="/speakers/" class="button editable outline">More info</a>
 			</span>
 		</div>
