Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ id: home
 		
 		<img src="images/icons/our-story.svg" class="center-icon" />
 		<h2><span class="dotted-underline editable">It's time to organise!</span></h2>
-		<p class="editable"><strong>PowerUp is no ordinary conference. </strong><br />You'll be skilled-up over two packed days, connect with people from all over the country, and usher in a new era of people-power in Australia.&nbsp;<br /><br /><strong>PowerUp will train you in the critical organising skills and launch a national network of local Action Groups</strong>. You'll build relationships with people from your home electorate and learn how to scale people-power nationally.&nbsp;<br /><br />PowerUp is about organising the power to do <em>more</em> than educate voters at election time. <strong>We are building the power to shift polls, move the media, and change the battleground issues that&rsquo;ll decide the next election.<br /><br />BUTTON: Secure your ticket!</strong></p>
+		<p class="editable"><strong>PowerUp is no <em>ordinary</em> conference. </strong><br />You'll be skilled-up over two packed days, connect with people from all over the country, and usher in a new era of people-power in Australia.&nbsp;<br /><br />At PowerUp, you will be trained in critical organising skills and build relationships with people from your electorate. Together, we will make a plan to scale people-power nationally and launch a national network of local Action Groups. &nbsp;<br /><br />PowerUp is about organising the power to do <em>more</em> than educate voters at election time. <strong>We are building the power to shift polls, move the media, and change the battleground issues that&rsquo;ll decide the next election.<br /><br />BUTTON: Secure your ticket!</strong></p>
 	</div>
 </div>
 
@@ -94,7 +94,7 @@ id: home
 			<span class="reverse-skew black-container reverse">				
 				<img src="images/icons/Speakers.svg" class="x-icon" />
 				<h2> <span class="dotted-underline editable" id="fade-position">Speakers </span></h2>
-				<p class="editable">Some of the most effective community organisers are lining up to speak at PowerUp. These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to disrupt the status quo.&nbsp;<em><strong>Stay tuned for updates in June.</strong></em></p>
+				<p class="editable">Some of the most impactful community organisers are lining up to speak at PowerUp. These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to win.&nbsp;<em><strong>Stay tuned for updates in June.</strong></em></p>
 				<a href="/speakers/" class="button editable outline">More info</a>
 			</span>
 		</div>
