Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ id: home
 		<img src="images/powerup-header.png" class="home-hero-image-powerup" />
 			<div class="texttext">
 				<h3 class="sub-heading slab editable">Join us at GetUp&rsquo;s first national conference<br />in Sydney on 23-24 September.</h3>
-		<a href="/ticket/" class="button home-hero-button editable">Secure your ticket!</a>
+		<a href="/ticket/" class="button home-hero-button editable">Grab My Ticket</a>
 			</div>
 		</div>
 	</div>
