--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ description: PowerUp
 id: home
 ---
 
-<a href="https://ticketbooth.azurewebsites.net/poweruptickets.aspx" class="button home-hero-button lnk_modal-open fixed-button" id="fixed-button" data-modal="https://ticketbooth.azurewebsites.net/poweruptickets.aspx" data-modaltitle="" data-modaldesc="">Grab your ticket!</a>
+<a href="/ticket/" class="button home-hero-button  fixed-button" id="fixed-button"   data-modaldesc="">Grab My Ticket</a>
 <div class="white-bg">
 		</div>
 		<div class="gradientgradient"></div>
