--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ id: home
 		<div class="row">
 			<div class="small-12 columns">
 				<!--<img src="images/icons/Tickets.svg" class="center-icon">-->
-				<h3 class="caption editable">A small scholarship fund has been set aside to help with the cost of tickets, accommodation and travel for those without the means. &nbsp;<br /><strong>Can you chip in to the PowerUp Scholarship Fund?</strong></h3>
+				<h3 class="caption editable">A small scholarship fund has been set aside to help with the cost of tickets, accommodation and travel for those without the means.<strong>Can you chip in to the PowerUp Scholarship Fund?</strong></h3>
 				<div class="button__wrapper">
           <a href="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" class="button caption__button lnk_modal-open" data-modal="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" data-modaltitle="" data-modaldesc="">Donate us</a>
 				</div>
