--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ id: home
 <div class="row narrative-container">
 	<div class="small-6 medium-2 columns">
 		<img src="images/icons/tickets.svg" class="narrative-icon" />
-		<p class="narrative editable">Secure<br />Your Ticket!</p>
+		<p class="narrative editable">Grab<br />My Ticket</p>
 	</div>
 	<div class="medium-1 columns arrow-icon-container">
 		<img src="images/icons/arrowarrow.svg" class="arrow-icon" />
