--- a/faqs.html
+++ b/faqs.html
@@ -2,7 +2,7 @@
 title: 'FAQs'
 description: FAQ
 ---
-<div class="white-bg"></div>
+<div class="dark-bg"></div>
 <div class="gradientgradient blue-gradient"></div>
 
 
