--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ id: home
 				<!--<img src="images/icons/Tickets.svg" class="center-icon">-->
 				<h3 class="caption editable">A small scholarship fund has been set aside to help with the cost of tickets, accommodation and travel for those without the means.<strong><br><br>Can you chip in to the PowerUp Scholarship Fund?</strong></h3>
 				<div class="button__wrapper">
-          <a href="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" class="button caption__button lnk_modal-open" data-modal="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" data-modaltitle="" data-modaldesc="">Donate</a>
+          <a href="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" class="button caption__button lnk_modal-open" data-modal="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" data-modaltitle="" data-modaldesc="">Donate us</a>
 				</div>
 
 			</div>
