--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ id: home
 ---
 
 <a href="/ticket/" class="button home-hero-button  fixed-button" id="fixed-button"   data-modaldesc="">Grab My Ticket</a>
-<div class="dark-bg">
+<div class="white-bg">
 		</div>
 		<div class="gradientgradient"></div>
 
