Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ description: PowerUp
 id: home
 ---
 
-<a href="/ticket/" class="button home-hero-button  fixed-button" id="fixed-button"   data-modaldesc="">Grab My Ticket</a>
+<a href="/ticket/" class="button home-hero-button  fixed-button" id="fixed-button" data-modaldesc="">Grab My Ticket</a>
 <div class="white-bg">
 		</div>
 		<div class="gradientgradient"></div>
@@ -19,7 +19,7 @@ id: home
 		<img src="images/powerup-header.png" class="home-hero-image-powerup" />
 			<div class="texttext">
 				<h3 class="sub-heading slab editable">Join us at GetUp&rsquo;s first national conference<br />in Sydney on 23-24 September.</h3>
-		<a href="/ticket/" class="button home-hero-button editable">Grab My Ticket</a>
+		<a href="/ticket/" class="button home-hero-button editable">Secure your ticket</a>
 			</div>
 		</div>
 	</div>
@@ -108,7 +108,7 @@ id: home
 		<div class="row">
 			<div class="small-12 columns">
 				<!--<img src="images/icons/Tickets.svg" class="center-icon">-->
-				<h3 class="caption editable">A small scholarship fund has been set aside to help with the cost of tickets, accommodation and travel for those without the means.<strong><br><br>Can you chip in to the PowerUp Scholarship Fund?</strong></h3>
+				<h3 class="caption editable">A small scholarship fund has been set aside to help with the cost of tickets, accommodation and travel for those without the means.<strong><br /><br />Can you chip in to the PowerUp Scholarship Fund?</strong></h3>
 				<div class="button__wrapper">
           <a href="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" class="button caption__button lnk_modal-open donate-button">Donate us</a>
 				</div>
