speakers and programs page

--- a/speakers.html
+++ b/speakers.html
@@ -13,11 +13,9 @@ description: PowerUp
 				<div>
 				<img src="../images/icons/speakers-white.svg" class="x-icon" align="top">
 				<h2> <span class="dotted-underline"> Speakers </span></h2>
-				<p>
-					We’re lining up some of the most effective Australian and global organisers of mass people-power. These inspiring speakers will bring you exclusive insights into the state of the nation and the world, and explain the strategy behind organised people-power as the antidote to the crises of our time.
-					<br><br>
-					<b>Stay tuned for the full list in June. 	</b>
-				</p>
+				<p class="editable">Some of the most impactful community organisers are lining up to speak at PowerUp. These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to win. <em><strong>Stay tuned for updates in June.</strong></em></p>
+					
+			
 				</div>
 			</span>
 		</div>
