--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ description: PowerUp
 id: home
 ---
 
-<a href="/ticket/" class="button home-hero-button  fixed-button" id="fixed-button" data-modaldesc="">Grab My Ticket</a>
+<a href="/ticket/" class="button home-hero-button  fixed-button" id="fixed-button" data-modaldesc="">Buy Ticket</a>
 <div class="white-bg">
 		</div>
 		<div class="gradientgradient"></div>
@@ -44,7 +44,7 @@ id: home
 <div class="row narrative-container">
 	<div class="small-6 medium-2 columns">
 		<img src="images/icons/tickets.svg" class="narrative-icon" />
-		<p class="narrative editable">Grab<br />My Ticket</p>
+		<p class="narrative editable">Secure your<br />place at PowerUp</p>
 	</div>
 	<div class="medium-1 columns arrow-icon-container">
 		<img src="images/icons/arrowarrow.svg" class="arrow-icon" />
@@ -110,7 +110,7 @@ id: home
 				<!--<img src="images/icons/Tickets.svg" class="center-icon">-->
 				<h3 class="caption editable">A small scholarship fund has been set aside to help with the cost of tickets, accommodation and travel for those without the means.<strong><br /><br />Can you chip in to the PowerUp Scholarship Fund?</strong></h3>
 				<div class="button__wrapper">
-          <a href="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" class="button caption__button lnk_modal-open donate-button">Donate us</a>
+          <a href="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" class="button caption__button lnk_modal-open donate-button">Donate</a>
 				</div>
 
 			</div>
