--- a/faqs.html
+++ b/faqs.html
@@ -15,6 +15,109 @@ description: FAQ
 
             <!---------------------------------------------------------------->
             <!--TICKET-->
+            <h3 class="faq-subheading"> PowerUp </h3>
+            <!--QUESTION-->
+            <a class="_accordion slab">
+                Why should I come to PowerUp?
+            </a>
+            <!--ANSWER-->
+            <div class="panel">
+                <p>
+                    For too long, self-serving corporations and right-wing power brokers have captured our democracy, making inequality worse and ravaging our environment. We need to build a new form of power that breaks this hold.
+
+Securing a safe world for future generations is going to come down us — and we’re going to have to step up now. At PowerUp, you will converge with a thousand passionate GetUp members for a weekend of shared values, practical skills workshops and strategy sessions. Then together we’ll launch a new national network of Action Groups that can take back power for everyday people. 
+
+If you want to get the skills, tools and connections to make a difference and you’re ready to take action, then we need you at PowerUp. <a href="/ticket/">Buy your ticket now.</a>
+                </p>
+            </div>
+
+            <div class="faq-underline"></div>
+             <!--QUESTION-->
+            <a class="_accordion slab">
+                What can I expect at PowerUp?
+            </a>
+            <!--ANSWER-->
+            <div class="panel">
+                <p>
+                    The PowerUp program has been built to maximise your opportunity to interact, connect and learn in engaging spaces. You can expect to spend about 80% of your time in small practical skills workshops, and 20% in all-in plenary spaces led by inspiring keynote speakers. There’s also plenty of breaks to stretch your legs, grab a coffee and get to know your fellow attendees outside of the formal program. Stay tuned for the full program in June.
+                </p>
+            </div>
+
+            <div class="faq-underline"></div>
+
+             <!--QUESTION-->
+            <a class="_accordion slab">
+                What will I learn at PowerUp?
+            </a>
+            <!--ANSWER-->
+            <div class="panel">
+                <p>
+                    Your PowerUp experience will focus on practical skills building, campaign strategy and community organising fundamentals.
+
+During workshops, you’ll learn about taking on leadership roles in your community, how to build and sustain effective groups, and other critical organising skills. At all-in plenaries, you’ll learn about GetUp’s strategy to scale up people-power in Australia, and how you can play a key role in it. 
+
+Perhaps most importantly, you’ll build meaningful connections with other attendees from your home electorate that could form the basis for a local Action Group.
+                </p>
+            </div>
+
+            <div class="faq-underline"></div>
+
+            <!--QUESTION-->
+            <a class="_accordion slab">
+                Do I need any skills or experience to attend?
+            </a>
+            <!--ANSWER-->
+            <div class="panel">
+                <p>
+                    You don’t need any skills or experience to attend PowerUp. Whether you’ve been involved in a community group or activism for years or just getting involved for the first time, PowerUp is a unique opportunity you won’t have had before.
+                </p>
+            </div>
+
+            <div class="faq-underline"></div>
+
+            <!--QUESTION-->
+            <a class="_accordion slab">
+                Who will be speaking at PowerUp?
+            </a>
+            <!--ANSWER-->
+            <div class="panel">
+                <p>
+                    Some of the most impactful community organisers are lining up to speak at PowerUp. These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to win. Stay tuned for updates in June.
+                </p>
+            </div>
+
+            <div class="faq-underline"></div>
+
+             <!--QUESTION-->
+            <a class="_accordion slab">
+                I’m passionate about attending PowerUp but can’t afford it. Does PowerUp offer any financial assistance?
+            </a>
+            <!--ANSWER-->
+            <div class="panel">
+                <p>
+                   As a Sydney-based conference, we recognise that the cost of a ticket, accommodation and travel can be especially prohibitive for interstate folk. We also acknowledge that the rising cost of living has put a strain on many households.
+
+PowerUp has put aside a limited scholarship fund. If you're passionate about attending PowerUp but need some help, <a href="https://docs.google.com/forms/d/e/1FAIpQLSe0YquhF6-YVtQoEQYt5XIyMjHkVWQNq4nRXQ9D6IEVKGPEtQ/viewform?c=0&w=1">please fill out this confidential application form.</a>
+                </p>
+            </div>
+
+            <div class="faq-underline"></div>
+
+
+              <!--QUESTION-->
+            <a class="_accordion slab">
+                I’d like to chip in towards the PowerUp Scholarship Fund. Can I do this?
+            </a>
+            <!--ANSWER-->
+            <div class="panel">
+                <p>
+                  If you haven’t purchased your ticket yet then <a href="https://powerup.org.au/ticket/">you can opt for a philanthropy ticket,</a> which will give you one ticket to PowerUp plus provide a generous donation to the fund. Alternatively, <a href="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate">you can click here to donate.</a> Every dollar will go towards another attendee’s ticket, travel, accommodation and food. Thank you for your generosity.
+                </p>
+            </div>
+
+            <div class="faq-underline"></div>
+            
+            <!--TICKET-->
             <h3 class="faq-subheading"> Ticket </h3>
             <!--QUESTION-->
             <a class="_accordion slab">
