--- a/faqs.html
+++ b/faqs.html
@@ -27,7 +27,7 @@ description: FAQ
 
 Securing a safe world for future generations is going to come down us — and we’re going to have to step up now. At PowerUp, you will converge with a thousand passionate GetUp members for a weekend of shared values, practical skills workshops and strategy sessions. Then together we’ll launch a new national network of Action Groups that can take back power for everyday people. 
 
-If you want to get the skills, tools and connections to make a difference and you’re ready to take action, then we need you at PowerUp. <a href="/ticket/">Buy your ticket now.</a>
+If you want to get the skills, tools and connections to make a difference and you’re ready to take action, then we need you at PowerUp. <a class="blue" href="/ticket/">Buy your ticket now.</a>
                 </p>
             </div>
 
@@ -97,7 +97,7 @@ Perhaps most importantly, you’ll build meaningful connections with other atten
                 <p>
                    As a Sydney-based conference, we recognise that the cost of a ticket, accommodation and travel can be especially prohibitive for interstate folk. We also acknowledge that the rising cost of living has put a strain on many households.
 
-PowerUp has put aside a limited scholarship fund. If you're passionate about attending PowerUp but need some help, <a href="https://docs.google.com/forms/d/e/1FAIpQLSe0YquhF6-YVtQoEQYt5XIyMjHkVWQNq4nRXQ9D6IEVKGPEtQ/viewform?c=0&w=1">please fill out this confidential application form.</a>
+PowerUp has put aside a limited scholarship fund. If you're passionate about attending PowerUp but need some help, <a href="https://docs.google.com/forms/d/e/1FAIpQLSe0YquhF6-YVtQoEQYt5XIyMjHkVWQNq4nRXQ9D6IEVKGPEtQ/viewform?c=0&w=1" class="blue">please fill out this confidential application form.</a>
                 </p>
             </div>
 
@@ -111,7 +111,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                  If you haven’t purchased your ticket yet then <a href="https://powerup.org.au/ticket/">you can opt for a philanthropy ticket,</a> which will give you one ticket to PowerUp plus provide a generous donation to the fund. Alternatively, <a href="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate">you can click here to donate.</a> Every dollar will go towards another attendee’s ticket, travel, accommodation and food. Thank you for your generosity.
+                  If you haven’t purchased your ticket yet then <a href="https://powerup.org.au/ticket/">you can opt for a philanthropy ticket,</a> which will give you one ticket to PowerUp plus provide a generous donation to the fund. Alternatively, <a href="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" class="blue">you can click here to donate.</a> Every dollar will go towards another attendee’s ticket, travel, accommodation and food. Thank you for your generosity.
                 </p>
             </div>
 
@@ -125,7 +125,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                  If you can’t find the answer you’re looking for on this page, <a href="mailto:powerup@getup.org.au">mail powerup@getup.org.au more information.</a>
+                  If you can’t find the answer you’re looking for on this page, <a href="mailto:powerup@getup.org.au" class="blue">mail powerup@getup.org.au more information.</a>
                 </p>
             </div>
 
@@ -176,7 +176,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                    If you want to buy a ticket but they’ve sold out in your electorate, <a href="https://docs.google.com/forms/d/e/1FAIpQLSeS_ke0eFqMP3UTtLRa12PSiW5X6SOuJWAX3yXRh7sk6m50Yg/viewform?c=0&w=1">click here to go on the waiting list.</a> It’s expected that there will be a few cancellations in each electorate so don’t lose hope!
+                    If you want to buy a ticket but they’ve sold out in your electorate, <a href="https://docs.google.com/forms/d/e/1FAIpQLSeS_ke0eFqMP3UTtLRa12PSiW5X6SOuJWAX3yXRh7sk6m50Yg/viewform?c=0&w=1" class="blue">click here to go on the waiting list.</a> It’s expected that there will be a few cancellations in each electorate so don’t lose hope!
                 </p>
             </div>
 
@@ -191,7 +191,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                    Your ticket is automatically sent to the email address you provide when you purchase your ticket. If you can’t see it in your inbox, please check your junk or spam folder. If it’s not there, please <a href="mailto:powerup@getup.org.au">email powerup@getup.org.au</a> to have the ticket resent.
+                    Your ticket is automatically sent to the email address you provide when you purchase your ticket. If you can’t see it in your inbox, please check your junk or spam folder. If it’s not there, please <a href="mailto:powerup@getup.org.au" class="blue">email powerup@getup.org.au</a> to have the ticket resent.
                 </p>
             </div>
 
@@ -205,7 +205,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                   Yes! It’s really important that each attendee has had their details recorded against a ticket. That’s because each ticket holder will be sent a registration pack in the post and will be allocated to a program pathway based upon their location. So, if you’ve entered the same details against multiple tickets, please <a href="mailto:powerup@getup.org.au">email powerup@getup.org.au</a> to update.
+                   Yes! It’s really important that each attendee has had their details recorded against a ticket. That’s because each ticket holder will be sent a registration pack in the post and will be allocated to a program pathway based upon their location. So, if you’ve entered the same details against multiple tickets, please <a href="mailto:powerup@getup.org.au" class="blue">email powerup@getup.org.au</a> to update.
                 </p>
             </div>
 
@@ -218,7 +218,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                   No problem, just <a href="mailto:powerup@getup.org.au">email powerup@getup.org.au</a> to update the name and details attached to that ticket so we can send the new ticket holder a registration pack in the post and organise their program based upon their electorate.
+                   No problem, just <a href="mailto:powerup@getup.org.au" class="blue">email powerup@getup.org.au</a> to update the name and details attached to that ticket so we can send the new ticket holder a registration pack in the post and organise their program based upon their electorate.
                 </p>
             </div>
 
@@ -231,7 +231,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                  Sure thing. Just <a href="mailto:powerup@getup.org.au">email powerup@getup.org.au</a> to organise for the cost of your ticket to be refunded.
+                  Sure thing. Just <a href="mailto:powerup@getup.org.au" class="blue">email powerup@getup.org.au</a> to organise for the cost of your ticket to be refunded.
 
                 </p>
             </div>
@@ -276,7 +276,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel ">
                 <p>
-                    There are no train services to UNSW, but the venue is serviced by many bus routes. The easiest way to plan your trip is to use Transport NSW Trip Planner: <a href="https://transportnsw.info/trip#/">transportnsw.info/trip/ </a>
+                    There are no train services to UNSW, but the venue is serviced by many bus routes. The easiest way to plan your trip is to use Transport NSW Trip Planner: <a href="https://transportnsw.info/trip#/" class="blue">transportnsw.info/trip/ </a>
                 </p>
             </div>
 
@@ -288,7 +288,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel ">
                 <p>
-                    There is complimentary and unlimited weekend parking on campus just a short walk from Clancy Auditorium. <a href="http://shops.20x20.net/WebRoot/Hosting/Shops/Healthed/MediaGallery/SGN09_0020_-_0020_Uni_0020_UNSW_0020_Map.pdf">Click here to view a map.</a> You can also check out alternative campus parking <a href="http://fmtoolbox.unsw.edu.au/comms/KensingtonParking.pdf">on this map here.</a>
+                    There is complimentary and unlimited weekend parking on campus just a short walk from Clancy Auditorium. <a href="http://shops.20x20.net/WebRoot/Hosting/Shops/Healthed/MediaGallery/SGN09_0020_-_0020_Uni_0020_UNSW_0020_Map.pdf" class="blue">Click here to view a map.</a> You can also check out alternative campus parking <a href="http://fmtoolbox.unsw.edu.au/comms/KensingtonParking.pdf" class="blue">on this map here.</a>
                 </p>
             </div>
             
@@ -309,7 +309,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
 
 <!---------------------------------------------------------------->
             <!--TRAVEL-->
-            <h3 class="faq-subheading"> TRAVEL & ACCOMMODATION </h3>
+            <h3 class="faq-subheading"> Travel & Accomodation </h3>
             <!--QUESTION-->
             <a class="_accordion slab">
                 I’m travelling interstate. When should I book my flight and accommodation?
@@ -333,7 +333,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
                     If you’re only in town for PowerUp then it might suit you to book accommodation as close to UNSW as possible. Central Sydney is only 5km bus ride from UNSW and offers a wide range of affordable accommodation options. Alternatively, Coogee Beach is just 3km down the road and has a range of options too. 
                     <br>
                     <br>
-                    To get a full sense of the options out there, you could you check hotel booking site <a href="https://www.booking.com.au">www.booking.com.au</a> and <a href="https://www.airbnb.com.au/"> www.airbnb.com.au. </a>
+                    To get a full sense of the options out there, you could you check hotel booking site <a href="https://www.booking.com.au" class="blue">www.booking.com.au</a> and <a href="https://www.airbnb.com.au/"> www.airbnb.com.au. </a>
                 </p>
             </div>
 
