br added to home

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ id: home
 				<div>
 				<img src="images/icons/program.svg" class="x-icon" />
 				<h2> <span class="dotted-underline editable">The Program</span></h2>
-				<p class="editable">PowerUp will focus on practical skill-building, provide interactive, engaging spaces and give you maximum opportunity to connect with other attendees. It&rsquo;s a unique experience appropriate to all levels of experience.<strong>&nbsp;Stay tuned for the full program in June.</strong></p>
+				<p class="editable">PowerUp will focus on practical skill-building, provide interactive, engaging spaces and give you maximum opportunity to connect with other attendees. It&rsquo;s a unique experience appropriate to all levels of experience.<strong><br>Stay tuned for the full program in June.</strong></p>
 				<a href="/program/" class="button editable outline">More info</a>
 				</div>
 			</span>
@@ -94,7 +94,8 @@ id: home
 			<span class="reverse-skew black-container reverse">				
 				<img src="images/icons/Speakers.svg" class="x-icon" />
 				<h2> <span class="dotted-underline editable" id="fade-position">Speakers </span></h2>
-				<p class="editable">Some of the most impactful community organisers are lining up to speak at PowerUp. These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to win.&nbsp;<em><strong>Stay tuned for updates in June.</strong></em></p>
+				<p class="editable">Some of the most impactful community organisers are lining up to speak at PowerUp. These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to win.<em><strong><br>
+        Stay tuned for updates in June.</strong></em></p>
 				<a href="/speakers/" class="button editable outline">More info</a>
 			</span>
 		</div>
@@ -108,7 +109,7 @@ id: home
 		<div class="row">
 			<div class="small-12 columns">
 				<!--<img src="images/icons/Tickets.svg" class="center-icon">-->
-				<h3 class="caption editable">A small scholarship fund has been set aside to help with the cost of tickets, accommodation and travel for those without the means.<strong><br /><br />Can you chip in to the PowerUp Scholarship Fund?</strong></h3>
+				<h3 class="caption editable">A small scholarship fund has been set aside to help with the cost of tickets, accommodation and travel for those without the means.<strong><br /><br/>Can you chip in to the PowerUp Scholarship Fund?</strong></h3>
 				<div class="button__wrapper">
           <a href="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" class="button caption__button lnk_modal-open donate-button">Donate</a>
 				</div>
