--- a/faqs.html
+++ b/faqs.html
@@ -111,7 +111,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                  If you haven’t purchased your ticket yet then <a href="https://powerup.org.au/ticket/">you can opt for a philanthropy ticket,</a> which will give you one ticket to PowerUp plus provide a generous donation to the fund. Alternatively, <a href="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" class="blue">you can click here to donate.</a> Every dollar will go towards another attendee’s ticket, travel, accommodation and food. Thank you for your generosity.
+                  If you haven’t purchased your ticket yet then <a class="blue" href="https://powerup.org.au/ticket/">you can opt for a philanthropy ticket,</a> which will give you one ticket to PowerUp plus provide a generous donation to the fund. Alternatively, <a href="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" class="blue">you can click here to donate.</a> Every dollar will go towards another attendee’s ticket, travel, accommodation and food. Thank you for your generosity.
                 </p>
             </div>
 
@@ -164,7 +164,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                    PowerUp has capped the number of tickets available for each electorate to ensure there’s an even spread of attendees. This will allow PowerUp to organise ticket-holders into evenly-sized workshop groups based upon their federal electorate. If you want to buy a ticket but they’ve sold out in your electorate, <a href="https://docs.google.com/forms/d/e/1FAIpQLSeS_ke0eFqMP3UTtLRa12PSiW5X6SOuJWAX3yXRh7sk6m50Yg/viewform?c=0&w=1">click here to go on the waiting list.</a>
+                    PowerUp has capped the number of tickets available for each electorate to ensure there’s an even spread of attendees. This will allow PowerUp to organise ticket-holders into evenly-sized workshop groups based upon their federal electorate. If you want to buy a ticket but they’ve sold out in your electorate, <a href="https://docs.google.com/forms/d/e/1FAIpQLSeS_ke0eFqMP3UTtLRa12PSiW5X6SOuJWAX3yXRh7sk6m50Yg/viewform?c=0&w=1" class="blue">click here to go on the waiting list.</a>
                 </p>
             </div>
 
@@ -301,7 +301,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel ">
                 <p>
-                    PowerUp is a fully accessible event. If you would like to know more or would like to register your mobility with us, please get in touch with powerup@getup.org.au. 
+                    PowerUp is a fully accessible event. If you would like to know more or would like to register your mobility with us, please get in <a href="mailto:powerup@getup.org.au" class="blue">touch with powerup@getup.org.au.</a> 
                 </p>
             </div>
             <div class="faq-underline"></div>
@@ -333,7 +333,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
                     If you’re only in town for PowerUp then it might suit you to book accommodation as close to UNSW as possible. Central Sydney is only 5km bus ride from UNSW and offers a wide range of affordable accommodation options. Alternatively, Coogee Beach is just 3km down the road and has a range of options too. 
                     <br>
                     <br>
-                    To get a full sense of the options out there, you could you check hotel booking site <a href="https://www.booking.com.au" class="blue">www.booking.com.au</a> and <a href="https://www.airbnb.com.au/"> www.airbnb.com.au. </a>
+                    To get a full sense of the options out there, you could you check hotel booking site <a href="https://www.booking.com.au" class="blue">www.booking.com.au</a> and <a href="https://www.airbnb.com.au/" class="blue"> www.airbnb.com.au. </a>
                 </p>
             </div>
 
