--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ id: home
 				</div>
 			</span>
 		</div>
-		<img src="images/programs.jpg" class="x-home-image" />
+		<img src="images/programs-home.jpg" class="x-home-image" />
 	</div>
 </div>
 <div class="x-img-container">
@@ -100,7 +100,7 @@ id: home
 				<a href="/speakers/" class="button editable outline">More info</a>
 			</span>
 		</div>
-		<img src="images/speakers.jpg" class="x-home-image" />
+		<img src="images/speakers-home.jpg" class="x-home-image" />
 	</div>
 	<div class="white-border"> </div>
 </div>
