--- a/speakers.html
+++ b/speakers.html
@@ -19,7 +19,7 @@ description: PowerUp
 				</div>
 			</span>
 		</div>
-	<img src="../images/programs.jpg" class="speakers-hero-image">
+	<img src="../images/sunday-people.jpg" class="speakers-hero-image">
 	</div>
 </div>
 
