--- a/about.html
+++ b/about.html
@@ -38,6 +38,6 @@ description: We've built an amazing team of developers, marketers, designers and
 				</p>
 			</span>
 		</div>
-		<div class="about-image" style="background: url(../images/commons.jpg);"></div>
+		<div class="about-image" style="background: url(../images/commons.jpg);" id="commons-image"></div>
 	</div>
 </div>
